# WIsH

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  KeggGaussianFits.tsv  Makefile  README.md  README.md.in  WIsH.def  computeNullParameters.R  main.cpp  main.h  main.h.in  mm.cpp  mm.h
benchmark/: KeggGenomes.lst  PhageSequences.lst  README  host-phage-ref.tsv
